--- a/ReactMultiPageWebsite/src/index.css
+++ b/ReactMultiPageWebsite/src/index.css
@@ -18,6 +18,7 @@ code {
 
 .tags-container{
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .summary-container{
@@ -130,4 +131,10 @@ table {
 
 .home .button-validate{
   margin: 15px;
+}
+
+.badge-primary.tags{
+  background-color: #3f51b5;  
+  cursor: pointer;
+  font-size: 15px;
 }
